info_TEXINFOS = gccintro.texi
gccintro_TEXINFOS = fdl.texi books.texi associations.texi rms.texi 
EXTRA_DIST = hello.c bad.c main.c hello1.h hello_fn.c main2.c c1makefile2 calc.c badpow.c dbmain.c ansi.c pi.c gnuarray.c main4.c w.c wabs.c shadow.c shadow2.c castqual.c dtest.c dtestval.c dtestval2.c dtestval3.c test.c hello.c null.c optim.c uninit.c hello.cc hellostr.cc string.cc buffer.h tprog.cc templates.cc templates2.cc alpha.c setfpu.c fptest2.c signed.c testgetc.c testgetc2.c loop.c hello_fn.c bye_fn.c hello.h main3.c collatz.c cov.c cov_c_gcov hello.c msg-file.c msg-nest1.h msg-nest2.h msg-invalidpp.c msg-cppheader.c msg-undeclared.c msg-parse.c msg-eoi.c msg-implicitdecl.c msg-unterm.c msg-string2.c msg-string2.cc msg-char.c msg-null.c msg-derefincomplete.c msg-unknownesc.c msg-assign.c msg-control.c msg-unused.c msg-const.c msg-init.c msg-ext msg-undef.c COPYING.FDL


